tests/ui/fail/exclusive_clone_copy.stderr
error: clone and copy are mutually exclusive
 --> tests/ui/fail/exclusive_clone_copy.rs:9:5
  |
9 |     rw_lock: RwLock<Vec<String>>,
  |     ^^^^^^^

error[E0599]: no method named `async_debug` found for struct `Mixed` in the current scope
  --> tests/ui/fail/exclusive_clone_copy.rs:27:31
   |
5  | struct Mixed {
   | ------------ method `async_debug` not found for this
...
27 |         format!("{:?}", mixed.async_debug().await),
   |                               ^^^^^^^^^^^ method not found in `Mixed`
